--- a/form.css
+++ b/form.css
@@ -27,7 +27,7 @@
   position: fixed;
   bottom: 20%;
   right: 39%;
-  border: 3px solid #f1f1f1;
+  border: 3px solid #f1f1f142;
   z-index: 9;
 }
 
@@ -35,7 +35,7 @@
 .form-container {
   max-width: 300px;
   padding: 10px;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.575);
 }
 
 /* Full-width input fields */
@@ -44,7 +44,7 @@
   padding: 15px;
   margin: 5px 0 22px 0;
   border: none;
-  background: #f1f1f1;
+  background: #f1f1f188;
 }
 
 /* When the inputs get focus, do something */
@@ -55,7 +55,7 @@
 
 /* Set a style for the submit/login button */
 .form-container .btn {
-  background-color:  rgba(94, 178, 211, 0.925);
+  background-color:  rgba(94, 178, 211, 0.596);
   color: white;
   padding: 16px 20px;
   border: none;
@@ -68,7 +68,7 @@
 
 /* Add a red background color to the cancel button */
 .form-container .cancel {
-  background-color: red;
+  background-color: rgba(255, 0, 0, 0.568);
 }
 
 /* Add some hover effects to buttons */
